[package]
name = "nettest"
version = "0.1.0"
edition = "2021"

[lib]
name = "nettest"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "nettest"
path = "src/main.rs"

[dependencies]
openssl = { version = "0.10.72", features = ["vendored"]}
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
base64 = "0.21.7"
hmac = "0.12.1"
regex = "1.10.3"
libc = "0.2.153"
fastrand = "2.0.1"
uuid = { version = "1.7.0", features = ["v4"] }
futures = "0.3"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.21.0", features = ["rustls"] }
tungstenite = { version = "0.21.0", features = ["rustls"] }
lazy_static = "1.4.0"
chrono = "0.4.34"
bytes = "1.10.1"
tokio-rustls = { version = "0.25.0" }
rustls = { version = "0.22.0" }
rustls-pemfile = "2.0.0"
quanta = "0.11"
plotters = "0.3.7"
plotters-backend = "0.3.7"
textplots = "0.8.7"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0"
anyhow = "1.0"
semver = "1.0"
mio = { version = "1", features = ["net"] }
ringbuf = "0.4.8"
rgb = "0.8.50"
prettytable = "0.10.0"
num_cpus = "1.13"
rayon = "1.8"

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[dev-dependencies]
tokio-native-tls = "0.3"
native-tls = "0.2"

